--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         pip install -r requirements.txt 
         #python test.py
         wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalPlanta.csv > /dev/null
+        python build1.py
         rm TA_PersonalPlanta.csv
-        #python build1.py
         echo Hola2 > saludo.txt
 
 
