--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,140 @@ jobs:
         python build1.py
         rm TA_PersonalPlanta.csv
         echo Hola2 > saludo.txt
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: shared-files1
+        path: |
+          test1
+
+  build2:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - name: Checkout del repositorio
+      uses: actions/checkout@v2
+
+    - name: Configurar Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: AUTOMATIZACIÓN
+      run: |
+        echo "Vamos a lo importante...1"    
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt 
+        #wget --no-check-certificate https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContrata.csv > /dev/null
+        python build2.py
+        rm TA_PersonalContrata.csv
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: shared-files2
+        path: |
+          test2
+          
+      
+    
+  build3:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - name: Checkout del repositorio
+      uses: actions/checkout@v2
+
+    - name: Configurar Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: AUTOMATIZACIÓN
+      run: |
+        echo "Vamos a lo importante...1"    
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt 
+        #wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalCodigotrabajo.csv > /dev/null
+        python build3.py
+        rm TA_PersonalCodigotrabajo.csv
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: shared-files3
+        path: |
+          test3
+      
+  build4:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - name: Checkout del repositorio
+      uses: actions/checkout@v2
+
+    - name: Configurar Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: AUTOMATIZACIÓN
+      run: |
+        echo "Vamos a lo importante...1"    
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt 
+        #wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContratohonorarios.csv > /dev/null
+        python build4.py
+        rm TA_PersonalContratohonorarios.csv
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: shared-files4
+        path: |
+          test4
+  unir:
+    runs-on: ubuntu-latest
+    needs: [build1,build2,build3,build4]
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - name: Checkout del repositorio
+      uses: actions/checkout@v2
+
+    - name: Configurar Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: shared-files1
+        path: test1
+      continue-on-error: true
+    - name: Download artifact2 
+      uses: actions/download-artifact@v2
+      with:
+        name: shared-files2
+        path: test2
+      continue-on-error: true
+    - name: Download artifact3 
+      uses: actions/download-artifact@v2
+      with:
+        name: shared-files3
+        path: test3
+      continue-on-error: true
+    - name: Download artifact4
+      uses: actions/download-artifact@v2
+      with:
+        name: shared-files4
+        path: test4
+      continue-on-error: true
+   
 
 
     - name: Commit y push cambios
