--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         echo "Vamos a lo importante...1"    
         python -m pip install --upgrade pip
         pip install -r requirements.txt 
-        #wget --no-check-certificate https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContrata.csv > /dev/null
+        wget --no-check-certificate https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContrata.csv > /dev/null
         python build2.py
         rm TA_PersonalContrata.csv
     - name: Upload artifact
@@ -90,7 +90,7 @@ jobs:
         echo "Vamos a lo importante...1"    
         python -m pip install --upgrade pip
         pip install -r requirements.txt 
-        #wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalCodigotrabajo.csv > /dev/null
+        wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalCodigotrabajo.csv > /dev/null
         python build3.py
         rm TA_PersonalCodigotrabajo.csv
     - name: Upload artifact
@@ -119,7 +119,7 @@ jobs:
         echo "Vamos a lo importante...1"    
         python -m pip install --upgrade pip
         pip install -r requirements.txt 
-        #wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContratohonorarios.csv > /dev/null
+        wget https://www.cplt.cl/transparencia_activa/datoabierto/archivos/TA_PersonalContratohonorarios.csv > /dev/null
         python build4.py
         rm TA_PersonalContratohonorarios.csv
     - name: Upload artifact
