--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,7 +166,12 @@ jobs:
         name: shared-files4
         path: test4
       continue-on-error: true
-   
+    - name: AUTOMATIZACIÓN
+      run: |
+        echo "Vamos a lo importante...1"    
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        python unir.py  
 
 
     - name: Commit y push cambios
