--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron:  '0 0 * * *'
+    - cron:  '0 0 * * 6'
   #  At 00:00 on Saturday
 
 jobs:
